--- a/index.html
+++ b/index.html
@@ -380,12 +380,12 @@
             <div class="card-header bg-white" style="border-bottom:0;">
               <span>
               <img src="https://media-exp1.licdn.com/dms/image/C4E03AQGiWpTUewQ76Q/profile-displayphoto-shrink_400_400/0/1613923672228?e=1650499200&v=beta&t=G8vnrygu05_P99MBeIG0Xm65kyT0iWfX0p5Tpmc-tns" class="postphoto">
-              <span class="posttext"><a href="https://www.linkedin.com/in/malan/" target="_blank" style="color: #212529;"> J. Malan</a></span>
+              <span class="posttext align-top"><a href="https://www.linkedin.com/in/malan/" target="_blank" style="color: #212529;"> J. Malan</a></span>
               <span class="float-right">
                 <i class="fas fa-ellipsis-h fa-md"></i>
               </span>
-              <span class="" style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 13px; color: #474747; margin-top: -7px;">I teach CS50</span>
-              <span class="" style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 13px; color: #474747;"> 25a <i class="fas fa-globe-americas fa-sm"></i></span>
+              <span class="align-middle" style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 13px; color: #474747; margin-left: -60px;">I teach CS50</span>
+              <span class="align-bottom" style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 13px; color: #474747; margin-left: -83px;"> 25a <i class="fas fa-globe-americas fa-sm"></i></span>
             </div>
             <div>
               <p class="card-text ml-3 pt-2" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 15px; color: black;">
@@ -437,12 +437,12 @@
             <div class="card-header bg-white" style="border-bottom:0;">
               <span>
               <img src="https://media-exp1.licdn.com/dms/image/C4D03AQHnKB8mDzkLfg/profile-displayphoto-shrink_400_400/0/1629708170546?e=1650499200&v=beta&t=s2ohynmFvz467n6hjFIzc1Ok6f8HYOlAECX47KOJB9Q" class="postphoto">
-              <span class="posttext"><a href="https://www.linkedin.com/in/ozanhalis/" target="_blank" style="color: #212529;">Ozan Halis İLTER</a></span>
+              <span class="posttext align-top"><a href="https://www.linkedin.com/in/ozanhalis/" target="_blank" style="color: #212529;">Ozan Halis İLTER</a></span>
               <span class="float-right">
                 <i class="fas fa-ellipsis-h fa-md"></i>
               </span>
-              <span class="" style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 13px; color: #474747;">Team Leader at YetGen | CodeCraft | Kablosuz Beyin | IEEE MEF...</span>
-              <span class="" style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 13px; color: #474747;">1s  <i class="fas fa-globe-americas fa-sm"></i></span>
+              <span class="align-middle" style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 13px; color: #474747; margin-left: -120px;">Team Leader at YetGen | CodeCraft | Kablosuz Beyin | IEEE MEF...</span>
+              <span class="align-bottom" style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 13px; color: #474747; margin-left: -397px;">1s  <i class="fas fa-globe-americas fa-sm"></i></span>
             </div>
             <div>
               <p class="card-text ml-3" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 15px; color: black;">
@@ -494,12 +494,12 @@
             <div class="card-header bg-white border-0">
               <span>
               <img src="https://media-exp1.licdn.com/dms/image/C5603AQFOc4FfGSHrgw/profile-displayphoto-shrink_400_400/0/1619210485825?e=1650499200&v=beta&t=F5FdpMUVIzcyZdO2T63Fj1TCaNpCLFlm0A0YTakZxyc" class="postphoto">
-              <span class="posttext"><a href="https://www.linkedin.com/in/ramazansancar/" target="_blank" style="color: black;">Ramazan Sancar</a></span>
+              <span class="posttext align-top"><a href="https://www.linkedin.com/in/ramazansancar/" target="_blank" style="color: black;">Ramazan Sancar</a></span>
               <span class="float-right">
                 <i class="fas fa-ellipsis-h fa-md"></i>
               </span>
-              <span class="" style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 13px; color: #474747;">Co-Founder at Kablosuz Beyin | Intern & Community Lead at Kod...</span>
-              <span class="" style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 13px; color: #474747;">25a  <i class="fas fa-globe-americas fa-sm"></i></span>
+              <span class="align-middle" style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 13px; color: #474747; margin-left: -118px;">Co-Founder at Kablosuz Beyin | Intern & Community Lead at Kod...</span>
+              <span class="align-bottom" style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 13px; color: #474747; margin-left: -407px;">25a  <i class="fas fa-globe-americas fa-sm"></i></span>
             </div>
             <div>
               <p class="card-text ml-3" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 15px; color: #212529;">
